--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             border-bottom: 2px solid #c21919;
         }
         
-        @media (max-width: 668px) {
+        @media (max-width: 600px) {
             div li a {
-                font-size: 12px;
+                font-size: 11px;
+                margin-right: -5px;
             }
         }
         
@@ -83,7 +84,7 @@
         <div class="row">
             <div class="col-12 bg-danger d-flex p-0" style="height: 35px;">
                 <div class="col-6 justify-content-center align-items-center d-flex p-0 h-100 text-light">
-                    <i class="fab fa-whatsapp text-light mr-2"></i><span>(11) 99575-4196</span>
+                    <i class="fab fa-whatsapp text-light mr-2"></i><b>(11) 99575-4196</b>
                 </div>
                 <div class="col-6 m-auto">
                     <div class="col-12 d-flex justify-content-end col-md-8 justify-content-end">
@@ -97,12 +98,12 @@
                 </div>
             </div>
             <div class="col-12 d-flex p-0">
-                <div class="col-5 col-sm-4 col-xl-4 d-flex m-auto justify-content-end align-items-center p-0 text-center" id="navegador">
+                <div class="col-5 col-sm-4 col-xl-4 d-flex m-auto justify-content-center align-items-center p-0 text-center" id="navegador">
                     <img class="col-9 col-sm-10 col-md-8 col-lg-6 col-xl-5" src="imagens/agradologo.png" alt="Agrado">
                 </div>
                 <div class="col-7 col-sm-8 col-xl-8 h-100 p-0 m-auto justify-content-center">
-                    <ul class="col-sm-12 col-md-7 col-lg-6 align-items-center h-100 justify-content-center p-0 m-auto nav nav-bar">
-                        <li class="nav-item"><a class="nav-link text-danger font-weight-bold" id="ativo" href="">HOME</a></li>
+                    <ul class="col-sm-12 col-md-7 col-lg-6 align-items-center h-100 justify-content-end p-0 m-auto nav nav-bar">
+                        <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" id="ativo" href="">HOME</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">GALERIA</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">CONTATO</a></li>
                     </ul>
