--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <i class="fab fa-whatsapp text-light mr-2"></i><b>(11) 99575-4196</b>
                 </div>
                 <div class="col-6 m-auto">
-                    <div class="col-12 d-flex justify-content-end col-md-8 justify-content-end">
+                    <div class="col-11 d-flex justify-content-end col-md-8 justify-content-end">
                         <a href="" class="text-light ml-3">
                             <i class="fab fa-instagram"></i>
                         </a>
@@ -98,11 +98,11 @@
                 </div>
             </div>
             <div class="col-12 d-flex p-0">
-                <div class="col-5 col-sm-4 col-xl-4 d-flex m-auto justify-content-center align-items-center p-0 text-center" id="navegador">
-                    <img class="col-9 col-sm-10 col-md-8 col-lg-6 col-xl-5" src="imagens/agradologo.png" alt="Agrado">
+                <div class="col-4 col-sm-4 col-xl-4 d-flex m-auto justify-content-center align-items-center p-0 text-center" id="navegador">
+                    <img class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5" src="imagens/agradologo.png" alt="Agrado">
                 </div>
-                <div class="col-7 col-sm-8 col-xl-8 h-100 p-0 m-auto justify-content-center">
-                    <ul class="col-sm-12 col-md-7 col-lg-6 align-items-center h-100 justify-content-end p-0 m-auto nav nav-bar">
+                <div class="col-8 col-sm-8 col-xl-8 h-100 p-0 m-auto justify-content-center">
+                    <ul class="col-sm-9 col-md-7 col-lg-5 align-items-center h-100 justify-content-center p-0 m-auto nav nav-bar">
                         <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" id="ativo" href="">HOME</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">GALERIA</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">CONTATO</a></li>
