--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             background: url(imagens/movel1.png) no-repeat;
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-attachment: fixed !important;
             height: 35em;
         }
         
