--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6 d-flex justify-content-center text-center">
-                                <p>Agrado Móveis Planejados &copy - Todos os direitos reservados</p>
+                                <p>Agrado Móveis Planejados - Todos os direitos reservados &copy</p>
                             </div>
                             <div class="d-block col-12 text-right"><span>by: @imaarques</span></div>
                         </div>
