--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         
         .sobre {
-            height: 30em;
+            height: 35em;
         }
         
         @media (max-width: 600px) {
@@ -192,10 +192,12 @@
         </div>
         <div class="container-fluid p-0">
             <div class="row bg-danger d-flex justify-content-center align-items-center text-center sobre">
-                <div class="col-10">
+                <div class="col-10 col-lg-8">
                     <h1 class="text-light font-weight-bold">Sobre Nós...</h1><br/>
-                    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, officia quae? Quod delectus iure, temporibus eligendi debitis saepe velit, repudiandae ratione maxime, voluptatibus sit iste. Harum qui omnis ducimus sunt?</p>
-                    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, officia quae? Quod delectus iure, temporibus eligendi debitis saepe velit, repudiandae ratione maxime, voluptatibus sit iste. Harum qui omnis ducimus sunt?</p>
+                    <p class="text-light">Estamos no mercado há mais de 10 anos iniciada por Leones Junior, onde começou sua jornada em busca de agradar e superar as expectativas de seus clientes e com muita dedicação e amor ao serviço conseguiu consolidar-se como uma marcanaria.
+                        O nome "Agrado" vem da nossa maior motivação em relação ao cliente, agradar e superar suas expectativas.</p>
+                    <p class="text-light">A qualidade de nossos móveis é garantida com produtos e mercadorias de primeira linha, sempre procuramos nos atualizar em relação a novas tecnologias de produtos no mercado, nossos fornecedores são confiáveis e respeitamos o meio ambiente.</p>
+                    <p class="text-light">Nossa missão é construir um fututro sólido junto com nossos clientes, fazendo móveis da melhor forma possivel, com respeito, amor e dedicação.</p>
                 </div>
             </div>
         </div>
