--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             #navegador {
                 height: 5em;
             }
+            .sobre {
+                height: 45em;
+            }
         }
         
         .marcador1 {
