--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <p class="text-light">Estamos no mercado há mais de 10 anos iniciada por Leones Junior, onde começou sua jornada em busca de agradar e superar as expectativas de seus clientes e com muita dedicação e amor ao serviço conseguiu consolidar-se como uma marcanaria.
                         O nome "Agrado" vem da nossa maior motivação em relação ao cliente, agradar e superar suas expectativas.</p>
                     <p class="text-light">A qualidade de nossos móveis é garantida com produtos e mercadorias de primeira linha, sempre procuramos nos atualizar em relação a novas tecnologias de produtos no mercado, nossos fornecedores são confiáveis e respeitamos o meio ambiente.</p>
-                    <p class="text-light">Nossa missão é construir um fututro sólido junto com nossos clientes, fazendo móveis da melhor forma possivel, com respeito, amor e dedicação.</p>
+                    <p class="text-light">Nossa missão é construir um fututro sólido junto com nossos clientes fazendo móveis da melhor forma possivel, com respeito, amor e dedicação.</p>
                 </div>
             </div>
         </div>
