--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6 d-flex justify-content-center text-center">
-                                <p>Agrado Móveis Planejados - Todos os direitos reservados &copy</p>
+                                <p>AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
                             </div>
                             <div class="d-block col-12 text-right"><span>by: @imaarques</span></div>
                         </div>
