--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                                     <a class="text-dark text-decoration-none font-weight-bold ml-3" href="">Contato</a>
                                 </p>
                             </div>
-                            <div class="col-md-6 d-flex justify-content-center text-center">
+                            <div class="col-md-6 d-flex justify-content-center text-center" style="font-size: 12px;">
                                 <p>AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
                             </div>
-                            <div class="d-block col-12 text-right"><span>by: @imaarques</span></div>
+                            <div style="font-size: 12px;" class="d-block col-12 text-right"><span>by: @imaarques</span></div>
                         </div>
                     </div>
                 </footer>
