--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <ul class="col-sm-9 col-md-7 col-lg-5 align-items-center h-100 justify-content-center p-0 m-auto nav nav-bar">
                         <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" id="ativo" href="">HOME</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">GALERIA</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">CONTATO</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="contato.html">CONTATO</a></li>
                     </ul>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                                 <p>
                                     <a class="text-dark text-decoration-none font-weight-bold ml-3" href="index.html">Home</a>
                                     <a class="text-dark text-decoration-none font-weight-bold ml-3" href="">Galeria</a>
-                                    <a class="text-dark text-decoration-none font-weight-bold ml-3" href="">Contato</a>
+                                    <a class="text-dark text-decoration-none font-weight-bold ml-3" href="contato.html">Contato</a>
                                 </p>
                             </div>
                             <div class="col-md-6 d-flex justify-content-center text-center" style="font-size: 12px;">
