--- a/contato.html
+++ b/contato.html
@@ -125,9 +125,9 @@
                 </div>
                 <div class="col-8 col-sm-8 col-xl-8 h-100 p-0 m-auto justify-content-center">
                     <ul class="col-sm-9 col-md-7 col-lg-5 align-items-center h-100 justify-content-center p-0 m-auto nav nav-bar">
-                        <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" id="ativo" href="">HOME</a></li>
+                        <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" href="">HOME</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">GALERIA</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="contato.html">CONTATO</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger font-weight-bold" id="ativo" href="contato.html">CONTATO</a></li>
                     </ul>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-9 col-sm-7 col-md-5 col-lg-4 col-xl-3 d-flex m-auto text-center justify-content-center align-items-center bg-white contato3">
                     <div class="col-12">
-                        <h3 class="text-danger font-weight-bold">Nossos canais de contato</h3><br/>
+                        <h3 class="text-danger font-weight-bold">Nossos canais</h3><br/>
                         <p class="text-dark font-weight-bold"><b> Telefone:</b> (11) 2544-1530</p>
                         <p class="text-dark font-weight-bold"><b> Celular/Whatsapp:</b> (11) 99575-4196</p>
                         <p class="text-dark font-weight-bold"><b> Email:</b> agradoplanejados@gmail.com</p>
