--- a/contato.html
+++ b/contato.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-8 col-sm-8 col-xl-8 h-100 p-0 m-auto justify-content-center">
                     <ul class="col-sm-9 col-md-7 col-lg-5 align-items-center h-100 justify-content-center p-0 m-auto nav nav-bar">
-                        <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" href="">HOME</a></li>
+                        <li class="nav-item mr-1"><a class="nav-link text-danger font-weight-bold" href="index.html">HOME</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" href="">GALERIA</a></li>
                         <li class="nav-item"><a class="nav-link text-danger font-weight-bold" id="ativo" href="contato.html">CONTATO</a></li>
                     </ul>
