--- a/contato.html
+++ b/contato.html
@@ -30,6 +30,7 @@
         
         body {
             font-family: Trebuchet;
+            overflow-x: hidden !important;
         }
         
         #navegador {
@@ -186,7 +187,7 @@
 
 
 
-    <div class="container-fluid p-0">
+    <div class="container-fluid">
         <div class="row">
             <footer class="col-12 bg-danger p-4">
                 <div class="container">
