--- a/sala.html
+++ b/sala.html
@@ -202,7 +202,7 @@
 
 
 
-    <div class="container-fluid p-0">
+    <div class="container-fluid">
         <div class="row">
             <footer class="col-12 bg-danger p-4">
                 <div class="container">
