--- a/galeria.html
+++ b/galeria.html
@@ -67,7 +67,7 @@
         .divfundo {
             background: url(imagens/movel1.png) no-repeat center;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed !important;
         }
         
         .linkgaleria a {
