--- a/outros.html
+++ b/outros.html
@@ -88,7 +88,7 @@
         .divfundo {
             background: url(imagens/movel1.png) no-repeat center;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed !important;
         }
         
         @media (min-width: 720px) {
