--- a/quarto.html
+++ b/quarto.html
@@ -75,7 +75,7 @@
         .divfundo {
             background: url(imagens/movel1.png) no-repeat center;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed !important;
         }
         
         @media (max-width: 600px) {
