--- a/banheiro.html
+++ b/banheiro.html
@@ -93,6 +93,18 @@
                 padding-left: 120px;
             }
         }
+        
+        @media (min-width: 720px) {
+            .alturagaleria {
+                height: 30em;
+            }
+        }
+        
+        @media (max-width: 719px) {
+            .alturagaleria {
+                height: 30em;
+            }
+        }
     </style>
 
 
@@ -135,9 +147,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-5 col-lg-5 col-xl-4 d-flex divfundo">
-                <div class="col-9 col-sm-7 col-md-10 col-lg-9 bg-danger d-flex m-auto justify-content-center align-items-center" style="height: 30em;">
+                <div class="col-9 col-sm-7 col-md-10 col-lg-9 bg-danger d-flex m-auto justify-content-center align-items-center alturagaleria">
                     <div class="col-12 m-auto justify-content-center align-items-center text-center linkgaleria">
-                        <a class="text-light font-weight-bold" href="cozinha.html">
+                        <a class="text-light font-weight-bold" href="galeria.html">
                             <h3 class="mb-4">Cozinha</h3>
                         </a>
                         <a class="text-light font-weight-bold" href="quarto.html">
