--- a/quarto.html
+++ b/quarto.html
@@ -116,13 +116,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 bg-danger d-flex p-0" style="height: 35px;">
-                <div class="col-4 justify-content-center align-items-center d-flex p-0 h-100 text-light">
-                    <i class="fab fa-whatsapp text-light mr-2"></i><b>(11) 99575-4196</b>
+                <div class="col-5 justify-content-center align-items-center d-flex p-0 h-100 text-light">
+                    <i class="fab fa-whatsapp text-light mr-2"></i><b style="font-size: 12px;">(11) 99575-4196</b>
                 </div>
                 <div class="col-4 justfy-content-center aligin-items-center d-flex">
                     <h6 class="text-white m-auto"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h6>
                 </div>
-                <div class="col-4 m-auto">
+                <div class="col-3 m-auto">
                     <div class="col-11 d-flex justify-content-end col-md-8 justify-content-end">
                         <a href="" class="text-light ml-3">
                             <i class="fab fa-instagram"></i>
