--- a/contato.html
+++ b/contato.html
@@ -197,7 +197,7 @@
                         <div class="col-md-6 d-flex justify-content-center text-center" style="font-size: 12px;">
                             <p class="text-light">AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
                         </div>
-                        <div style="font-size: 12px;" class="d-block col-12 text-right"><span class="text-light">by: @imaarques</span></div>
+                        <div style="font-size: 12px;" class="d-block col-12 text-right"><span class="text-light"><h5 class="font-weight-bold">Powered by: @imaarques</h5></span></div>
                     </div>
                 </div>
             </footer>
