--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <div class="col-md-6 d-flex justify-content-center text-center" style="font-size: 12px;">
                                 <p>AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
                             </div>
-                            <div style="font-size: 12px;" class="d-block col-12 text-right"><span><h5 class="font-weight-bold">Powered by: @imaarques</h5></span></div>
+                            <div style="font-size: 12px;" class="d-block col-12 text-right"><span><h6 class="font-weight-bold">Desenvolvido por: @imaarques</h6></span></div>
                         </div>
                     </div>
                 </footer>
