--- a/outros.html
+++ b/outros.html
@@ -317,7 +317,7 @@
                         <div class="col-md-6 d-flex justify-content-center text-center" style="font-size: 12px;">
                             <p class="text-light">AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
                         </div>
-                        <div style="font-size: 12px;" class="d-block col-12 text-right"><span class="text-light"><h5 class="font-weight-bold">Powered by: @imaarques</h5></span></div>
+                        <div style="font-size: 12px;" class="d-block col-12 text-right"><span class="text-light"><h6 class="font-weight-bold">Desenvolvido por: @imaarques</h6></span></div>
                     </div>
                 </div>
             </footer>
