--- a/contato.html
+++ b/contato.html
@@ -92,8 +92,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
         <div class="row">
             <div class="col-12 p-0 justify-content-center align-items-center contato1">
                 <div class="mt-4 col-12">
@@ -139,32 +137,26 @@
                 </div>
             </div>
         </div>
-    </div>
 
-
-
-
-
-
-    <div class="container-fluid p-0">
-        <div class="row">
-            <footer class="col-12 p-4" style="background-color: rgb(129, 18, 18);">
-                <div class="container">
-                    <div class="row pt-1">
-                        <div class="col-md-6 text-center">
-                            <p>
-                                <a class="text-light text-decoration-none font-weight-bold ml-3" href="index.html">Home</a>
-                                <a class="text-light text-decoration-none font-weight-bold ml-3" href="galeria.html">Galeria</a>
-                                <a class="text-light text-decoration-none font-weight-bold ml-3" href="contato.html">Contato</a>
-                            </p>
-                        </div>
-                        <div class="col-md-6 d-flex justify-content-center text-center text-light" style="font-size: 12px;">
-                            <p>AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
-                        </div>
-                        <div style="font-size: 12px;" class="d-block col-12 text-right text-light"><span><h6 class="font-weight-bold">Desenvolvido por: @imaarques</h6></span></div>
+        <div class="row p-5" style="background-color: rgb(129, 18, 18);">
+            <div class="col-12 d-block d-md-flex align-items-center p-0">
+                <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-8 pb-4 pb-md-0">
+                        <ul class="nav navbar">
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="galeria.html">Galeria</a></li>
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="contato.html">Contato</a></li>
+                        </ul>
                     </div>
                 </div>
-            </footer>
+                <div class="col-12 col-md-6">
+                    <h6 class="text-light">AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</h6>
+                </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center align-items-center pt-4">
+                <h6 class="font-weight-bold text-light">Desenvolvido por: @imaarques</h6>
+
+            </div>
         </div>
     </div>
 
