--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
         <div class="row imagens">
             <div class="col-9 m-auto justify-content-center">
                 <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
@@ -99,67 +97,64 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid p-0">
-            <div class="row d-flex align-items-center serviços">
-                <div class="col-12 p-0 col-lg-6 d-flex justify-content-center">
-                    <div class="bg-danger col-10 rounded pt-2 d-flex align-items-center justify-content-center" style="height: 35em;">
-                        <div class="text-center">
-                            <h3 class="text-light font-weight-bold">Conheça nossos serviços</h3>
-                            <h4><a class="text-dark font-weight-bold" href="galeria.html">Cozinhas</a></h4>
-                            <p class="text-light">Nossas cozinhas planejadas são feitas com muito amor e dedicação</p>
-                            <h4><a class="text-dark font-weight-bold" href="quartos.html">Quartos</a></h4>
-                            <p class="text-light">Quartos planejados pensados no gosto de cada cliente</p>
-                            <h4><a class="text-dark font-weight-bold" href="salas.html">Salas</a></h4>
-                            <p class="text-light">Salas de estar, jantar ou empresariais, tudo com produtos de primeira linha</p>
-                            <h4><a class="text-dark font-weight-bold" href="banheiros.html">Banheiros</a></h4>
-                            <p class="text-light">Os banheiros mais agradáveis possíveis</p>
-                        </div>
+        <div class="row d-flex align-items-center serviços">
+            <div class="col-12 p-0 col-lg-6 d-flex justify-content-center">
+                <div class="bg-danger col-10 rounded pt-2 d-flex align-items-center justify-content-center" style="height: 35em;">
+                    <div class="text-center">
+                        <h3 class="text-light font-weight-bold">Conheça nossos serviços</h3>
+                        <h4><a class="text-dark font-weight-bold" href="galeria.html">Cozinhas</a></h4>
+                        <p class="text-light">Nossas cozinhas planejadas são feitas com muito amor e dedicação</p>
+                        <h4><a class="text-dark font-weight-bold" href="quartos.html">Quartos</a></h4>
+                        <p class="text-light">Quartos planejados pensados no gosto de cada cliente</p>
+                        <h4><a class="text-dark font-weight-bold" href="salas.html">Salas</a></h4>
+                        <p class="text-light">Salas de estar, jantar ou empresariais, tudo com produtos de primeira linha</p>
+                        <h4><a class="text-dark font-weight-bold" href="banheiros.html">Banheiros</a></h4>
+                        <p class="text-light">Os banheiros mais agradáveis possíveis</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid p-0">
-            <div class="row bg-danger d-flex justify-content-center align-items-center text-center sobre">
-                <div class="col-10 col-lg-8">
-                    <h1 class="text-light font-weight-bold">Sobre Nós...</h1><br/>
-                    <p class="text-light">Estamos no mercado há mais de 10 anos iniciada por Leones Junior, onde começou sua jornada em busca de agradar e superar as expectativas de seus clientes e com muita dedicação e amor ao serviço conseguiu consolidar-se como uma marcenaria.
-                        O nome "Agrado" vem da nossa maior motivação em relação ao cliente, agradar e superar suas expectativas.</p>
-                    <p class="text-light">A qualidade de nossos móveis é garantida com produtos e mercadorias de primeira linha, sempre procuramos nos atualizar em relação a novas tecnologias de produtos no mercado, nossos fornecedores são confiáveis e respeitamos o meio ambiente.</p>
-                    <p class="text-light">Nossa missão é construir um fututro sólido junto com nossos clientes fazendo móveis da melhor forma possivel, com respeito, amor e dedicação.</p>
+        <div class="row bg-danger d-flex justify-content-center align-items-center text-center sobre">
+            <div class="col-10 col-lg-8">
+                <h1 class="text-light font-weight-bold">Sobre Nós...</h1><br/>
+                <p class="text-light">Estamos no mercado há mais de 10 anos iniciada por Leones Junior, onde começou sua jornada em busca de agradar e superar as expectativas de seus clientes e com muita dedicação e amor ao serviço conseguiu consolidar-se como uma marcenaria.
+                    O nome "Agrado" vem da nossa maior motivação em relação ao cliente, agradar e superar suas expectativas.</p>
+                <p class="text-light">A qualidade de nossos móveis é garantida com produtos e mercadorias de primeira linha, sempre procuramos nos atualizar em relação a novas tecnologias de produtos no mercado, nossos fornecedores são confiáveis e respeitamos o meio ambiente.</p>
+                <p class="text-light">Nossa missão é construir um fututro sólido junto com nossos clientes fazendo móveis da melhor forma possivel, com respeito, amor e dedicação.</p>
+            </div>
+        </div>
+
+
+        <div class="row p-5" style="background-color: rgb(129, 18, 18);">
+            <div class="col-12 d-block d-md-flex align-items-center p-0">
+                <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-8 pb-4 pb-md-0">
+                        <ul class="nav navbar">
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="galeria.html">Galeria</a></li>
+                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="contato.html">Contato</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h6 class="text-light">AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</h6>
                 </div>
             </div>
-        </div>
-        <div class="container-fluid p-0">
-            <div class="row">
-                <footer class="col-12 p-4" style="background-color: rgb(129, 18, 18);">
-                    <div class="container">
-                        <div class="row pt-1">
-                            <div class="col-md-6 text-center">
-                                <p>
-                                    <a class="text-light text-decoration-none font-weight-bold ml-3" href="index.html">Home</a>
-                                    <a class="text-light text-decoration-none font-weight-bold ml-3" href="galeria.html">Galeria</a>
-                                    <a class="text-light text-decoration-none font-weight-bold ml-3" href="contato.html">Contato</a>
-                                </p>
-                            </div>
-                            <div class="col-md-6 d-flex justify-content-center text-center text-light" style="font-size: 12px;">
-                                <p>AGRADO MÓVEIS PLANEJADOS – CNPJ: 26798398/000147, RUA TARAPITINGA 174 – VILA JACUÍ</p>
-                            </div>
-                            <div style="font-size: 12px;" class="d-block col-12 text-right text-light"><span><h6 class="font-weight-bold">Desenvolvido por: @imaarques</h6></span></div>
-                        </div>
-                    </div>
-                </footer>
+            <div class="col-12 d-flex justify-content-center align-items-center pt-4">
+                <h6 class="font-weight-bold text-light">Desenvolvido por: @imaarques</h6>
+
             </div>
         </div>
+    </div>
 
 
 
 
 
 
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="js/bootstrap.min.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
