--- a/outros.html
+++ b/outros.html
@@ -239,12 +239,10 @@
         <div class="row p-5" style="background-color: rgb(129, 18, 18);">
             <div class="col-12 d-block d-md-flex align-items-center p-0">
                 <div class="col-12 col-md-6">
-                    <div class="col-12 col-md-8 pb-4 pb-md-0">
-                        <ul class="nav navbar">
-                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="galeria.html">Galeria</a></li>
-                            <li class="nav-item"> <a class="text-light text-decoration-none font-weight-bold ml-3 nav-link" href="contato.html">Contato</a></li>
-                        </ul>
+                    <div class="d-flex justify-content-center align-items-center col-12 pb-4 pb-md-0">
+                        <a class="text-light text-decoration-none font-weight-bold nav-link" style="font-size: 18px;" href="index.html">Home</a>
+                        <a class="text-light text-decoration-none font-weight-bold nav-link" style="font-size: 18px;" href=" galeria.html ">Galeria</a>
+                        <a class="text-light text-decoration-none font-weight-bold nav-link " style="font-size: 18px;" href="contato.html">Contato</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
