--- a/sala.html
+++ b/sala.html
@@ -163,12 +163,11 @@
                 </div>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center pt-4">
-                <a href="http://www.igormarques.me" target="new_blank" class="linkme text-decoration-none">
-                    <div class="imaarques">
-                        <p class="desenvolvidopor">Desenvolvido por:</p>
-                        <img src="imagens/igorlogo2.png" alt="Igor Marques">
-                    </div>
-                </a>
+                <div class="imaarques">
+                    <a href="http://www.igormarques.me" target="new_blank " class="linkme text-decoration-none ">
+                        <p class="desenvolvidopor tema5 ">Desenvolvido por: igormarques.me</p>
+                    </a>
+                </div>
 
             </div>
         </div>
